# django-crud

./: pyproject.toml
products/: models.py  urls.py  views.py
products/migrations/: 0001_initial.py
products/templates/: products.html
project/: settings.py  urls.py
